--- a/money_control_app/src/css/MyContainerCSS.css
+++ b/money_control_app/src/css/MyContainerCSS.css
@@ -5,6 +5,7 @@
 
 
 .content{
+    position: relative;
     display: flex;
     flex-grow: 1;
     padding: 10px;
@@ -15,11 +16,13 @@
     display: flex;
     flex-direction: column;
     border-left: 1px solid;
-
+    text-align: center;
+    justify-content: space-around;
+    height: 100%;
 }
 
 .summary>div{
-    padding: 50px 50px;
+    padding: 30px 50px;
 }
 
 .addExpenseBox{
@@ -28,13 +31,16 @@
     border-radius: 5px;
     margin: 30px;
     display: grid;
-    grid-template-columns: 80px 200px;
+    grid-template-columns: 100px 200px;
     flex-grow: 1;
     place-content: center;
     gap: 10px 20px;
     align-items: center;
 }
 
+input[type="radio"]{
+    height: 20px;
+}
 input{
     height: 30px;
 }
@@ -44,4 +50,9 @@ input{
     margin:20px;
     grid-column: 1 / span 2;
     height: auto;
+}
+
+.radio-button{
+    display: flex;
+    justify-content: center;
 }
